--- a/cadastro.html
+++ b/cadastro.html
@@ -5,70 +5,162 @@
 <title>Cadastro – RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="theme/theme.css">
-<link rel="stylesheet" href="theme/layout.css">
-<link rel="stylesheet" href="theme/components.css">
+<link rel="stylesheet" href="./theme/theme.css">
+<link rel="stylesheet" href="./theme/layout.css">
+<link rel="stylesheet" href="./theme/components.css">
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<style>
+body{
+  background:linear-gradient(180deg,#ffffff,#f2f2f2);
+  display:flex;
+  justify-content:center;
+  padding:20px;
+  color:#333;
+}
+
+.container{
+  width:100%;
+  max-width:420px;
+  background:#fff;
+  padding:24px;
+  border-radius:22px;
+  box-shadow:0 10px 28px rgba(0,0,0,.1);
+}
+
+h1{
+  text-align:center;
+  color:#d4af37;
+  margin-bottom:10px;
+}
+
+.sub{
+  text-align:center;
+  font-size:.85rem;
+  color:#666;
+  margin-bottom:20px;
+}
+
+label{
+  font-size:.8rem;
+  font-weight:700;
+  margin-top:12px;
+  display:block;
+}
+
+input, select{
+  width:100%;
+  padding:12px;
+  border-radius:14px;
+  border:1px solid #ccc;
+  margin-top:6px;
+  font-size:.95rem;
+}
+
+button{
+  margin-top:20px;
+  width:100%;
+  padding:16px;
+  border:none;
+  border-radius:18px;
+  background:linear-gradient(180deg,#e6c97a,#d4af37);
+  font-size:1rem;
+  font-weight:800;
+  color:#000;
+}
+</style>
 </head>
 
 <body>
 
-<div class="page">
 <div class="container">
 
-<h2>Cadastro</h2>
+  <h1>Cadastro</h1>
+  <div class="sub">Informe seus dados para continuar</div>
 
-<label>Tipo de usuário</label>
-<select id="tipo">
-  <option value="motorista">Motorista</option>
-  <option value="passageiro">Passageiro</option>
-</select>
+  <label>Tipo de usuário</label>
+  <select id="tipo">
+    <option value="">Selecione</option>
+    <option value="motorista">Motorista</option>
+    <option value="passageiro">Passageiro</option>
+  </select>
 
-<label>Nome</label>
-<input id="nome">
+  <label>Nome completo</label>
+  <input type="text" id="nome" placeholder="Ex: João Silva">
 
-<label>Telefone</label>
-<input id="telefone">
+  <label>Telefone</label>
+  <input type="tel" id="telefone" placeholder="Ex: 81999999999">
 
-<div id="motoristaCampos">
-  <label>Placa do carro</label>
-  <input id="placa">
+  <div id="camposMotorista" style="display:none">
+    <label>Placa do carro</label>
+    <input type="text" id="placa" placeholder="Ex: ABC1D23">
 
-  <label>Modelo do carro</label>
-  <input id="modelo">
+    <label>Modelo do carro</label>
+    <input type="text" id="modelo" placeholder="Ex: Onix 2022">
+  </div>
+
+  <button onclick="cadastrar()">Cadastrar</button>
+
 </div>
-
-<button onclick="cadastrar()">Salvar cadastro</button>
-
-</div>
-</div>
-
-<script src="core/supabase.js"></script>
 
 <script>
-const tipoSel = document.getElementById("tipo");
-const motoristaCampos = document.getElementById("motoristaCampos");
+/* ================= SUPABASE ================= */
+const SUPABASE_URL = "https://msnqiiwcityikslikbow.supabase.co";
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbnFpaXdjaXR5aWtzbGlrYm93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MDM5OTgsImV4cCI6MjA4MzI3OTk5OH0.0KyaSuL5At4_Cfa4TOM7kvvkVYv-gmR2sb7vX6VHkaU";
 
-tipoSel.onchange = () => {
-  motoristaCampos.style.display =
-    tipoSel.value === "motorista" ? "block" : "none";
-};
+const supabaseClient = supabase.createClient(
+  SUPABASE_URL,
+  SUPABASE_ANON_KEY
+);
 
-async function cadastrar() {
-  const tipo = tipoSel.value;
+/* ================= UI ================= */
+document.getElementById("tipo").addEventListener("change", e=>{
+  document.getElementById("camposMotorista").style.display =
+    e.target.value === "motorista" ? "block" : "none";
+});
+
+/* ================= CADASTRO ================= */
+async function cadastrar(){
+  const tipo = tipo.value;
+  const nome = document.getElementById("nome").value.trim();
+  const telefone = document.getElementById("telefone").value.trim();
+  const placa = document.getElementById("placa").value.trim();
+  const modelo = document.getElementById("modelo").value.trim();
+
+  if(!tipo || !nome || !telefone){
+    alert("Preencha os campos obrigatórios.");
+    return;
+  }
+
   const dados = {
     tipo,
-    nome: nome.value,
-    telefone: telefone.value,
-    placa: tipo === "motorista" ? placa.value : null,
-    modelo_carro: tipo === "motorista" ? modelo.value : null,
-    ativo: true
+    nome,
+    telefone,
+    ativo:true
   };
 
-  const ok = await salvarUsuario(dados);
-  if (ok) {
-    alert("Cadastro realizado!");
-    location.href = "login.html";
+  if(tipo === "motorista"){
+    if(!placa || !modelo){
+      alert("Preencha os dados do veículo.");
+      return;
+    }
+    dados.placa = placa;
+    dados.modelo = modelo;
   }
+
+  const { error } = await supabaseClient
+    .from("usuarios")
+    .insert([dados]);
+
+  if(error){
+    console.error(error);
+    alert("Erro ao cadastrar. Verifique se o telefone já existe.");
+    return;
+  }
+
+  alert("Cadastro realizado com sucesso!");
+  window.location.href = "login.html";
 }
 </script>
 
