--- a/login.html
+++ b/login.html
@@ -5,51 +5,146 @@
 <title>Login – RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="theme/theme.css">
-<link rel="stylesheet" href="theme/layout.css">
-<link rel="stylesheet" href="theme/components.css">
+<link rel="stylesheet" href="./theme/theme.css">
+<link rel="stylesheet" href="./theme/layout.css">
+<link rel="stylesheet" href="./theme/components.css">
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<style>
+body{
+  background:linear-gradient(180deg,#ffffff,#f2f2f2);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  min-height:100vh;
+  color:#333;
+}
+
+.container{
+  width:100%;
+  max-width:400px;
+  background:#fff;
+  padding:26px;
+  border-radius:24px;
+  box-shadow:0 12px 30px rgba(0,0,0,.12);
+}
+
+h1{
+  text-align:center;
+  color:#d4af37;
+  font-weight:800;
+  letter-spacing:2px;
+}
+
+.sub{
+  text-align:center;
+  font-size:.85rem;
+  color:#666;
+  margin-bottom:22px;
+}
+
+label{
+  font-size:.8rem;
+  font-weight:700;
+  margin-top:14px;
+  display:block;
+}
+
+input{
+  width:100%;
+  padding:14px;
+  border-radius:16px;
+  border:1px solid #ccc;
+  margin-top:6px;
+  font-size:1rem;
+}
+
+button{
+  width:100%;
+  margin-top:22px;
+  padding:16px;
+  border:none;
+  border-radius:18px;
+  background:linear-gradient(180deg,#e6c97a,#d4af37);
+  font-size:1rem;
+  font-weight:800;
+  color:#000;
+}
+
+.link{
+  text-align:center;
+  margin-top:14px;
+  font-size:.85rem;
+}
+
+.link a{
+  color:#d4af37;
+  font-weight:700;
+  text-decoration:none;
+}
+</style>
 </head>
 
 <body>
 
-<div class="page">
 <div class="container">
 
-<h2>Acesso</h2>
+  <h1>RF DRIVER</h1>
+  <div class="sub">Acesso rápido e seguro</div>
 
-<label>Nome</label>
-<input id="nome">
+  <label>Telefone cadastrado</label>
+  <input type="tel" id="telefone" placeholder="Ex: 81999999999">
 
-<label>Telefone</label>
-<input id="telefone">
+  <button onclick="login()">Entrar</button>
 
-<button onclick="entrar()">Entrar</button>
-
-<p>
-<a href="cadastro.html">Criar cadastro</a>
-</p>
+  <div class="link">
+    Ainda não tem cadastro?
+    <br>
+    <a href="cadastro.html">Criar conta</a>
+  </div>
 
 </div>
-</div>
-
-<script src="core/global.js"></script>
-<script src="core/supabase.js"></script>
 
 <script>
-async function entrar() {
-  const user = await loginUsuario(nome.value, telefone.value);
+/* ================= SUPABASE ================= */
+const SUPABASE_URL = "https://msnqiiwcityikslikbow.supabase.co";
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbnFpaXdjaXR5aWtzbGlrYm93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MDM5OTgsImV4cCI6MjA4MzI3OTk5OH0.0KyaSuL5At4_Cfa4TOM7kvvkVYv-gmR2sb7vX6VHkaU";
 
-  if (!user) {
-    alert("Usuário não encontrado ou bloqueado");
+const supabaseClient = supabase.createClient(
+  SUPABASE_URL,
+  SUPABASE_ANON_KEY
+);
+
+/* ================= LOGIN ================= */
+async function login(){
+  const telefone = document.getElementById("telefone").value.trim();
+
+  if(!telefone){
+    alert("Informe o telefone.");
     return;
   }
 
-  App.set("usuario", user);
+  const { data, error } = await supabaseClient
+    .from("usuarios")
+    .select("*")
+    .eq("telefone", telefone)
+    .eq("ativo", true)
+    .single();
 
-  if (user.tipo === "motorista") {
-    App.go("index.html");
-  } else {
-    App.go("index-passageiro.html");
+  if(error || !data){
+    alert("Usuário não encontrado ou bloqueado.");
+    return;
+  }
+
+  // salva sessão
+  localStorage.setItem("usuarioLogado", JSON.stringify(data));
+
+  // redirecionamento por tipo
+  if(data.tipo === "motorista"){
+    window.location.href = "index.html";
+  }else{
+    window.location.href = "index-passageiro.html";
   }
 }
 </script>
