--- a/index-passageiro.html
+++ b/index-passageiro.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>RF Driver – Passageiro</title>
+<title>Passageiro – RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="./theme/theme.css">
@@ -11,37 +11,40 @@
 
 <style>
 body{
-  background:linear-gradient(180deg,#ffffff,#f2f2f2);
+  background:linear-gradient(180deg,#ffffff,#f3f3f3);
+  color:#222;
 }
 
 .page{
   min-height:100vh;
   display:flex;
   justify-content:center;
-  padding:18px;
+  align-items:center;
+  padding:20px;
 }
 
-.container{
+.box{
   width:100%;
   max-width:420px;
   display:flex;
   flex-direction:column;
-  gap:16px;
+  gap:18px;
 }
 
 /* HEADER */
 .header{
-  padding:22px;
-  border-radius:22px;
-  background:#fff;
   text-align:center;
-  box-shadow:0 8px 22px rgba(0,0,0,.08);
+  padding:26px 22px;
+  border-radius:24px;
+  background:#fff;
+  box-shadow:0 10px 26px rgba(0,0,0,.1);
 }
 
 .header h1{
   font-size:1.6rem;
   font-weight:800;
   color:#d4af37;
+  letter-spacing:1px;
 }
 
 .header span{
@@ -52,20 +55,33 @@ body{
 /* CARD */
 .card{
   background:#fff;
-  border-radius:18px;
-  padding:16px;
-  box-shadow:0 6px 18px rgba(0,0,0,.08);
+  padding:22px;
+  border-radius:22px;
+  box-shadow:0 8px 22px rgba(0,0,0,.08);
+  text-align:center;
+}
+
+.card p{
+  font-size:.9rem;
+  color:#555;
 }
 
 /* BOTÃO */
-.btn{
+.btn-main{
   padding:18px;
-  border-radius:18px;
+  border-radius:20px;
   border:none;
   background:linear-gradient(180deg,#e6c97a,#d4af37);
   font-size:1.05rem;
   font-weight:800;
   color:#000;
+}
+
+/* FOOTER */
+.footer{
+  text-align:center;
+  font-size:.75rem;
+  color:#777;
 }
 </style>
 </head>
@@ -73,53 +89,49 @@ body{
 <body>
 
 <div class="page">
-<div class="container">
+  <div class="box">
 
-  <!-- HEADER -->
-  <div class="header">
-    <h1>PASSAGEIRO</h1>
-    <span>Consulta de valor da viagem</span>
+    <!-- HEADER -->
+    <div class="header">
+      <h1>PASSAGEIRO</h1>
+      <span>Consulta de valor da corrida</span>
+    </div>
+
+    <!-- CONTEÚDO -->
+    <div class="card">
+      <p>
+        Consulte o valor estimado da sua viagem de forma
+        <strong>rápida, transparente e segura</strong>.
+      </p>
+    </div>
+
+    <!-- AÇÃO -->
+    <button class="btn-main" onclick="iniciar()">
+      ▶ Consultar valor da corrida
+    </button>
+
+    <!-- FOOTER -->
+    <div class="footer">
+      RF Driver • Uso exclusivo para passageiros
+    </div>
+
   </div>
-
-  <!-- BOAS VINDAS -->
-  <div class="card">
-    <strong id="nomePassageiro"></strong><br>
-    <small>Consulte o valor estimado da sua viagem</small>
-  </div>
-
-  <!-- AÇÃO -->
-  <button class="btn" onclick="iniciarCalculo()">
-    🚕 Calcular valor da corrida
-  </button>
-
-  <!-- REGRAS PASSAGEIRO -->
-  <div class="card">
-    <strong>📌 Regras para passageiros</strong>
-    <ul style="margin-top:8px;font-size:.85rem;color:#555">
-      <li>Valores podem variar conforme horário</li>
-      <li>Tarifa dinâmica pode ser aplicada</li>
-      <li>O valor exibido é apenas uma estimativa</li>
-    </ul>
-  </div>
-
 </div>
-</div>
-
-<script src="core/global.js"></script>
 
 <script>
-const usuario = App.get("usuario");
+/* ================= PROTEÇÃO ================= */
+const usuario = JSON.parse(localStorage.getItem("usuarioLogado"));
 
-if (!usuario || usuario.tipo !== "passageiro") {
-  location.href = "login.html";
+if(!usuario || usuario.tipo !== "passageiro"){
+  window.location.href = "login.html";
 }
 
-document.getElementById("nomePassageiro").innerText =
-  "Olá, " + usuario.nome;
-
-function iniciarCalculo(){
-  App.reset();
-  App.go("origem.html");
+/* ================= FLUXO ================= */
+function iniciar(){
+  localStorage.removeItem("origem");
+  localStorage.removeItem("destino");
+  localStorage.removeItem("valorBase");
+  window.location.href = "origem.html";
 }
 </script>
 
