--- a/cadastro.html
+++ b/cadastro.html
@@ -122,7 +122,7 @@ document.getElementById("tipo").addEventListener("change", e=>{
 
 /* ================= CADASTRO ================= */
 async function cadastrar(){
-  const tipo = tipo.value;
+  const tipo = document.getElementById("tipo").value;
   const nome = document.getElementById("nome").value.trim();
   const telefone = document.getElementById("telefone").value.trim();
   const placa = document.getElementById("placa").value.trim();
@@ -137,7 +137,7 @@ async function cadastrar(){
     tipo,
     nome,
     telefone,
-    ativo:true
+    ativo: true
   };
 
   if(tipo === "motorista"){
