--- a/cadastro.html
+++ b/cadastro.html
@@ -106,38 +106,54 @@ const supabaseClient = supabase.createClient(
 );
 
 /* ================= CADASTRO MOTORISTA ================= */
-async function cadastrarMotorista(){
+async function cadastrar(){
+  const tipo = document.getElementById("tipo").value;
   const nome = document.getElementById("nome").value.trim();
   const telefone = document.getElementById("telefone").value.trim();
-  const placa = document.getElementById("placa").value.trim();
-  const modelo = document.getElementById("modelo").value.trim();
 
-  if(!nome || !telefone || !placa || !modelo){
-    alert("Preencha todos os campos.");
+  const placaInput = document.getElementById("placa");
+  const modeloInput = document.getElementById("modelo");
+
+  if(!tipo || !nome || !telefone){
+    alert("Preencha os campos obrigatórios.");
     return;
+  }
+
+  // BASE — comum a todos
+  const dados = {
+    tipo,
+    nome,
+    telefone,
+    ativo: true
+  };
+
+  // SOMENTE motorista recebe placa/modelo
+  if(tipo === "motorista"){
+    const placa = placaInput.value.trim();
+    const modelo = modeloInput.value.trim();
+
+    if(!placa || !modelo){
+      alert("Preencha placa e modelo do veículo.");
+      return;
+    }
+
+    dados.placa = placa;
+    dados.modelo = modelo;
   }
 
   const { error } = await supabaseClient
     .from("usuarios")
-    .insert([{
-      tipo: "motorista",
-      nome,
-      telefone,
-      placa,
-      modelo,
-      ativo: true
-    }]);
+    .insert([dados]);
 
   if(error){
     console.error(error);
-    alert("Erro ao cadastrar motorista. Verifique se o telefone já existe.");
+    alert("Erro ao cadastrar: " + error.message);
     return;
   }
 
-  alert("Motorista cadastrado com sucesso!");
+  alert("Cadastro realizado com sucesso!");
   window.location.href = "login.html";
 }
 </script>
-
 </body>
 </html>
