--- a/cadastro.html
+++ b/cadastro.html
@@ -138,7 +138,7 @@ async function cadastrar(){
     }
 
     dados.placa = placa;
-    dados.modelo = modelo;
+    dados.modelo_carro = modelo;
   }
 
   const { error } = await supabaseClient
