--- a/cadastro.html
+++ b/cadastro.html
@@ -91,7 +91,10 @@ button{
   <label>Modelo do carro</label>
   <input type="text" id="modelo">
 
-  <button onclick="cadastrarMotorista()">Cadastrar</button>
+  <button type="button"
+    onclick="cadastrar()>
+       Cadastrar
+      </button>
 
 </div>
 
