--- a/cadastro.html
+++ b/cadastro.html
@@ -49,7 +49,7 @@ label{
   display:block;
 }
 
-input, select{
+input{
   width:100%;
   padding:12px;
   border-radius:14px;
@@ -68,6 +68,7 @@ button{
   font-size:1rem;
   font-weight:800;
   color:#000;
+  cursor:pointer;
 }
 </style>
 </head>
@@ -77,7 +78,7 @@ button{
 <div class="container">
 
   <h1>Cadastro</h1>
-  <div class="sub">Cadastro exclusivo para motoristas</div>
+  <div class="sub">Motoristas e passageiros</div>
 
   <label>Nome completo</label>
   <input type="text" id="nome">
@@ -85,16 +86,15 @@ button{
   <label>Telefone</label>
   <input type="tel" id="telefone">
 
-  <label>Placa do carro</label>
+  <label>Placa do carro (opcional)</label>
   <input type="text" id="placa">
 
-  <label>Modelo do carro</label>
+  <label>Modelo do carro (opcional)</label>
   <input type="text" id="modelo">
 
-  <button type="button"
-    onclick="cadastrar()>
-       Cadastrar
-      </button>
+  <button type="button" onclick="cadastrar()">
+    Cadastrar
+  </button>
 
 </div>
 
@@ -108,38 +108,29 @@ const supabaseClient = supabase.createClient(
   SUPABASE_ANON_KEY
 );
 
-/* ================= CADASTRO MOTORISTA ================= */
+/* ================= CADASTRO ================= */
 async function cadastrar(){
-  const tipo = document.getElementById("tipo").value;
   const nome = document.getElementById("nome").value.trim();
   const telefone = document.getElementById("telefone").value.trim();
+  const placa = document.getElementById("placa").value.trim();
+  const modelo = document.getElementById("modelo").value.trim();
 
-  const placaInput = document.getElementById("placa");
-  const modeloInput = document.getElementById("modelo");
-
-  if(!tipo || !nome || !telefone){
-    alert("Preencha os campos obrigatórios.");
+  if(!nome || !telefone){
+    alert("Preencha nome e telefone.");
     return;
   }
 
-  // BASE — comum a todos
+  // regra automática
+  const tipo = placa && modelo ? "motorista" : "passageiro";
+
   const dados = {
-    tipo,
     nome,
     telefone,
+    tipo,
     ativo: true
   };
 
-  // SOMENTE motorista recebe placa/modelo
   if(tipo === "motorista"){
-    const placa = placaInput.value.trim();
-    const modelo = modeloInput.value.trim();
-
-    if(!placa || !modelo){
-      alert("Preencha placa e modelo do veículo.");
-      return;
-    }
-
     dados.placa = placa;
     dados.modelo_carro = modelo;
   }
@@ -155,8 +146,8 @@ async function cadastrar(){
   }
 
   alert("Cadastro realizado com sucesso!");
-  window.location.href = "login.html";
 }
 </script>
+
 </body>
 </html>
