Atualizar o cadastro.html

--- a/cadastro.html
+++ b/cadastro.html
@@ -166,7 +166,7 @@ async function cadastrar(){
 
   // 🔀 REDIRECIONAMENTO CORRETO
   if(tipo === "motorista"){
-    window.location.href = "index-motorista.html";
+    window.location.href = "index.html";
   } else {
     window.location.href = "index-passageiro.html";
   }
